Fix dark mode card title text color contrast issue

--- a/gui/assets/css/hacks.scss
+++ b/gui/assets/css/hacks.scss
@@ -39,6 +39,10 @@
   max-width: 100%;
 }
 
+.dark-mode .card-header .card-title {
+  color: #c2c7d0;
+}
+
 .leaflet-control-fullscreen-button:after {
   font-family: 'Font Awesome 5 Free';
   content: '\f065';
